--- a/public/themes/Client/index.html
+++ b/public/themes/Client/index.html
@@ -363,16 +363,16 @@
             </div>
             <nav>
                 <div class="nav nav-tabs rooms lh-room" id="nav-tab" role="tablist">
-                    <button class="nav-link active" id="nav-Deluxe-tab" data-bs-toggle="tab"
-                        data-bs-target="#nav-Deluxe" type="button" role="tab" aria-controls="nav-Deluxe"
+                    <button class="nav-link active" id="nav-a-tab" data-bs-toggle="tab"
+                        data-bs-target="#nav-a" type="button" role="tab" aria-controls="nav-a"
                         aria-selected="true">
                         <img src="assets/img/room/1.jpg" alt="1">
-                        Deluxe Room
+                        a Room
                     </button>
-                    <button class="nav-link" id="nav-Single-tab" data-bs-toggle="tab" data-bs-target="#nav-Single"
-                        type="button" role="tab" aria-controls="nav-Single" aria-selected="false">
+                    <button class="nav-link" id="nav-b-tab" data-bs-toggle="tab" data-bs-target="#nav-b"
+                        type="button" role="tab" aria-controls="nav-b" aria-selected="false">
                         <img src="assets/img/room/2.jpg" alt="2">
-                        Single Room
+                        b Room
                     </button>
                     <button class="nav-link" id="nav-Super-tab" data-bs-toggle="tab" data-bs-target="#nav-Super"
                         type="button" role="tab" aria-controls="nav-Super" aria-selected="false">
@@ -388,13 +388,13 @@
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade active show" id="nav-Deluxe" role="tabpanel" aria-labelledby="nav-Deluxe-tab">
+                <div class="tab-pane fade active show" id="nav-a" role="tabpanel" aria-labelledby="nav-a-tab">
                     <div class="container">
                         <div class="row p-0 lh-d-block">
                             <div class="col-xl-6 col-lg-12">
                                 <div class="lh-room-contain">
                                     <div class="lh-contain-heading">
-                                        <h4>Deluxe Room</h4>
+                                        <h4>a Room</h4>
                                         <div class="lh-room-price">
                                             <h4>$30 /<span>Per night</span></h4>
                                         </div>
@@ -440,13 +440,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="nav-Single" role="tabpanel" aria-labelledby="nav-Single-tab">
+                <div class="tab-pane fade" id="nav-b" role="tabpanel" aria-labelledby="nav-b-tab">
                     <div class="container">
                         <div class="row p-0 lh-d-block">
                             <div class="col-xl-6 col-lg-12">
                                 <div class="lh-room-contain">
                                     <div class="lh-contain-heading">
-                                        <h4>Single Room</h4>
+                                        <h4>b Room</h4>
                                         <div class="lh-room-price">
                                             <h4>$40 /<span>Per night</span></h4>
                                         </div>
@@ -661,7 +661,7 @@
                                     </div>
                                     <div class="amenities-contain">
                                         <h4 class="amenities-heading">Our Restaurant</h4>
-                                        <p>This is the dolor sit amet adipisicing elit. Ducimus corrupti sit amet tempore placeat ipsa.</p>
+                                        <p></p>
                                         <a href="facilities.html">Read more <i class="ri-arrow-right-line"></i></a>
                                     </div>
                                 </div>
@@ -793,7 +793,7 @@
                         <div class="lh-prices-out">
                             <div class="lh-prices-in">
                                 <h4 class="lh-price-dollar"><span>$</span>75<code> / Per night</code></h4>
-                                <h4 class="lh-prices-heading">Deluxe Room</h4>
+                                <h4 class="lh-prices-heading">a Room</h4>
                             </div>
                             <div class="lh-prices-viwe">
                                 <ul>
